--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">DiSARM - Disease Surveillance And Risk Monitoring</div>
+                <div class="intro-heading">Data-driven decision making platform for malaria</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
