--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,10 @@
     <body id="page-top" class="index">
 
     {% include nav.html %}
-    {% include header.html %}
-    {% include services.html %}
-    {% include progress_updates_grid.html %}
-    {% include about.html %}
-    {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
+
+    {{content}}
+    
     {% include footer.html %}
-    {% include modals.html %}
     {% include js.html %}
 
     </body>
