--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/the_project">The project</a>
+                        <a class="page-scroll" href="/">The project</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/team">Team</a>
