--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -173,10 +173,11 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default {
     border-color: transparent;
     background-color: #222;
+
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
 }
 
@@ -238,7 +239,7 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default {
         padding: 25px 0;
         border: 0;
-        background-color: transparent;
+        background-color: rgba(4, 4, 4, 0.72);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
