--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-    <body id="page-top" class="index">
+    <body id="page-top" class="index post-page">
 
     {% include nav.html %}
 
