--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -270,7 +270,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
+    background-image: url('{{ site.baseurl }}/img/header-bg2.jpg');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -287,6 +287,7 @@ header .intro-text {
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: {{ site.data.template.font.secondary }};
+    /*background-color: rgba(254,209,54, 0.8);*/
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
