--- a/_includes/boxes.html
+++ b/_includes/boxes.html
@@ -1,11 +1,13 @@
 <div class="container">
-  <h3 class="text-center" style="margin: 3em 0;">Progress</h3>
+  <h3 class="text-center headline">Progress</h3>
   <div class="row">
     {% for post in site.progress_updates limit:2 %}
       <div class="col-xs-12 col-sm-6 text-center" >
         <img src="/img/portfolio/{{ post.thumbnail }}">
         <h4>{{ post.title }}</h4>
-        <p class="text-muted">{{ post.subtitle }}</p>
+        <p class="text-muted">{{ post.subtitle }} - {{post.date | date_to_string}}</p>
+        <p>{{post.excerpt}}</p>
+        <a href="{{post.url}}">Read more</a>
       </div>
     {% endfor %}
   </div>
