--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
   <footer>
-        <div class="container">
+        <div class="container footer">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
                         <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
                         </li>
                         {% endfor %}
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
