--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">DiSARM - Disease Surveillance And Risk Monitoring</div>
                 <div class="intro-heading">Data-driven decision making platform for malaria</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
