--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       <p>
         A core feature of DiSARM is the ability to combine malaria program information such as case data with satellite derived environmental and climatological variables to produce risk maps and recommendations of actions that a program can make decision on.  The system operates in near real time and is fully automated, producing outputs in different formats that suit the users.
       </p>
-      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/c_scale,h_432,w_768/v1480340388/disarm-web/ad8ucglqamrssah1n3qt.png">
+      <img class="about-image" src="/img/core/1.png">
       <p>
       Behind the scenes is DiSARM’s core that uses satellite data processed using Google Earth Engine. The core interface gives users a real-time view of the malaria situation and allows predictions of risk at specific locations, such as health facility catchments, villages and schools. Overlaying data on interventions allows programs to better understand their distribution and identify areas at high risk with insufficient levels of protection.
       </p>
