--- a/_includes/boxes.html
+++ b/_includes/boxes.html
@@ -3,7 +3,7 @@
   <div class="row">
     {% for post in site.progress_updates limit:2 %}
       <div class="col-xs-12 col-sm-6 text-center" >
-        <img src="/img/portfolio/{{ post.thumbnail }}">
+        <img src="/img/{{ post.img }}" style="max-width: 100%;">
         <h4>{{ post.title }}</h4>
         <p class="text-muted">{{ post.subtitle }} - {{post.date | date_to_string}}</p>
         <p>{{post.excerpt}}</p>
