--- a/_includes/boxes.html
+++ b/_includes/boxes.html
@@ -1,10 +1,9 @@
 <div class="container">
-  <h3 class="text-center headline">Progress</h3>
+  <h3 class="text-center headline">Last 2 bits of progress</h3>
   <div class="row">
     {% for post in site.progress_updates limit:2 %}
       <div class="col-xs-12 col-sm-6 text-center" >
-        <img src="{{ site.image_root_url }}w_400,h_400,c_fill/{{ site.image_account }}/{{ member.image }}" alt="{{ member.content | strip_html | truncatewords: 15 }}">
-        <img src="/img/{{ post.img }}" style="max-width: 100%;">
+        <img src="{{ site.image_root_url }}w_400,h_200,c_fill/{{ site.image_account }}/{{ post.image }}" alt="{{ post.content | strip_html | truncatewords: 15 }}">
         <h4>{{ post.title }}</h4>
         <p class="text-muted">{{ post.subtitle }} - {{post.date | date_to_string}}</p>
         <p>{{post.excerpt}}</p>
