--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -35,7 +35,7 @@ p {
 }
 
 .headline-shadow {
-  text-shadow: 1px 1px 10px rgba(0,0,0,0.8);
+  text-shadow: 1px 1px 10px #d4d4d4;
 }
 
 /***
@@ -51,7 +51,7 @@ p {
   width: 100%;
   margin: 1.5em auto;
   display: block;
-
+  box-shadow: 0px 2px 10px #d4d4d4;
 }
 
 
@@ -94,6 +94,8 @@ p {
 
 .post-img {
   margin: 0 auto;
+  box-shadow: 0px 2px 10px #d4d4d4;
+  padding: 0;
 }
 
 .post-content {
