--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -102,6 +102,14 @@ p {
   /*text-align: center;*/
 }
 
+.navbar-brand>img {
+  height: 100%;
+  // padding: 15px;
+  width: auto;
+}
+
+
+
 @media (min-width: 768px) {
   .post-page {
     padding-top: 0;
