--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="/">
+                    <img src="{{ site.image_root_url }}{{ site.image_account }}/disarm-slant-logo-comp">
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
