--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                         <a class="page-scroll" href="/">The project</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/team">Team</a>
+                        <a class="page-scroll" href="/partners_and_team">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/progress">Progress</a>
