--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,37 +1,15 @@
-<!-- Team Section -->
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-                {% for member in site.people %}
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-circle" style="max-width: 100%;" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
+<!-- TEAM -->
+  <h2 class="team-subtitle text-center">Team</h2>
 
-                        </ul>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+  <div class="container team">
+    <div class="row">
+      {% for person in site.team_members %}
+      <div class="col-xs-12 col-sm-6 team-member">
+
+        <img src="{{ site.image_root_url }}w_400,h_400,c_fill/{{ site.image_account }}/{{ person.image }}" alt="{{ person.content | strip_html | truncatewords: 15 }}" class="img-responsive img-circle team-image">
+        <h4 class="text-center">{{person.name}}</h4>
+        <p class="text-muted text-center">{{person.content}}</p>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
