added partners intro text

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -2,6 +2,8 @@
 <h2 class="team-subtitle text-center">Partners</h2>
 <div class="container team">
   <div class="row">
+    <p>DiSARM development is a team effort. To ensure we are building DiSARM in the right way to do the right things, we are working very closely with the National Malaria Control Programs of Swaziland and Zimbabwe.</p>
+    <p>We are also working with the following partners:</p>
 
     {% for partner in site.partners %}
     <div class="post row">
