--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
       </p>
       <img class="about-image" src="/img/core/2.png">
       <p>
-        The DiSARM mobile app (right) allows field teams, such as IRS, foci investigation and active surveillance teams, to receive information on where to conduct activities, to visualize this information on offline maps and enter data at specific points, such as households, structures and breeding sites. This allows for a more coordinated and integrated way to collect and share data among teams, helps teams to navigate to exactly where they need to go and allows managers to track progress of teams as they work.
+        The DiSARM mobile app is being developed to allow field teams, such as IRS, foci investigation and active surveillance teams, to receive information on where to conduct activities, to visualize this information on offline maps and enter data at specific points, such as households, structures and breeding sites. This allows for a more coordinated and integrated way to collect and share data among teams, helps teams to navigate to exactly where they need to go and allows managers to track progress of teams as they work.
       </p>
 
       <p>
