changed section heading

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <div class="container about" id="about">
-  <h3 class="text-center headline">About us</h3>
+  <h3 class="text-center headline">The platform</h3>
   <div class="row">
     <div class="col-sm-12 col-md-offset-1 col-md-10">
       <p>
