changed test logo back to simple text

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    <img src="{{ site.image_root_url }}{{ site.image_account }}/disarm-slant-logo-comp">
+                    DiSARM
                 </a>
             </div>
 
