--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">DiSARM - Disease Surveillance And Risk Monitoring</div>
-                <div class="intro-heading">Data-driven decision making platform for malaria</div>
+                <div class="intro-heading">Data-driven decision making platform for malaria elimination</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
