--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    DiSARM
+                    <img src="/img/logo.png" />
                 </a>
             </div>
 
