--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <meta name="theme-color" content="#fed136">
+    <link rel="icon" href="/favicon.png"> 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 
