Add UCSF logo to navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,8 +32,12 @@
                     <li>
                         <a class="page-scroll" href="/code_and_tech">Code and tech</a>
                     </li>
+                    <li class="ucsf-logo-container">
+                        <img class="ucsf-logo" src="/img/ucsf.png" />
+                    </li>
                 </ul>
             </div>
+            
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
