--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -2,6 +2,13 @@
   padding: 13.5px 13px 13.5px;
 }
 
+.ucsf-logo {
+  display: none;
+  height: 50px;
+  margin-left: 2em;
+  padding-top: 1em;
+}
+
 p {
   line-height: 2;
   font-size: 16px;
@@ -167,6 +174,11 @@ header .intro-text .intro-heading {
   }
 
 @media (min-width: 768px) {
+  
+  .ucsf-logo, .ucsf-logo-container {
+    display: block;
+  }
+
   .post-page {
     padding-top: 0;
   }
