Add Link to ucsf logo, and add Malaria Elimination Initiative

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
                         <a class="page-scroll" href="/code_and_tech">Code and tech</a>
                     </li>
                     <li class="ucsf-logo-container">
-                        <img class="ucsf-logo" src="/img/ucsf.png" />
+                        <a href="http://www.ucsf.edu/" style="padding: 0;" target="_blank"><img class="ucsf-logo" src="/img/ucsf.png" /></a>
                     </li>
                 </ul>
             </div>
