--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
       <p>
         DiSARM also has a targeting module, to allow risk maps produced by the core to be used to prioritize areas for interventions such as indoor residual spraying (IRS), insecticide treated nets (ITNs) and mass drug administration (MDA). Users can select areas based on risk and then group individual structures within those areas into operational units which can be assigned to teams on the ground. Previously this process would require external expertise to conduct the relevant analyses and manually create the operational units; DiSARM automates these processes as much as possible to simplify them to a point at which programs are able to do the analyses themselves.
       </p>
-      <img class="about-image" src="{{ site.image_root_url }}w_780/{{ site.image_account }}/sbbwmkjcmivw9nzayiea">
+      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/v1493015368/disarm-website/DiSARM_Targerter_1.png">
       <p>
         The DiSARM mobile app is being developed to allow field teams, such as IRS, foci investigation and active surveillance teams, to receive information on where to conduct activities, to visualize this information on offline maps and enter data at specific points, such as households, structures and breeding sites. This allows for a more coordinated and integrated way to collect and share data among teams, helps teams to navigate to exactly where they need to go and allows managers to track progress of teams as they work.
       </p>
