--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
         DiSARM is being implemented in Swaziland and Zimbabwe. The early version has already led to substantial impact in Swaziland with the IRS spraying guided by prioritization maps produced by DiSARM. In partnership with CHAI we are working on a foci management module. This will simplify the process of identifying and delineating foci, and will allow programs to trigger and guide investigation and response and monitor and track progress towards elimination of all foci.
       </p>
 
-      <img class="about-image" src="{{ site.image_root_url }}w_780/{{ site.image_account }}/aylxzxzsauwd9iviwlsn">
+      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/v1493015291/disarm-website/DiSARM_Targeter_2.png">
     <p>
       A forecasting module will allow programs to receive alerts as to the locations of potential outbreaks before they happen and send alerts to relevant parties, such as health facilities, community health workers and other community leaders in these areas.
     </p>
