added contact to bottom of index.html

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,13 +25,16 @@
       </p>
 
       <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/v1493015291/disarm-website/DiSARM_Targeter_2.png">
-    <p>
-      A forecasting module will allow programs to receive alerts as to the locations of potential outbreaks before they happen and send alerts to relevant parties, such as health facilities, community health workers and other community leaders in these areas.
-    </p>
-
-    <p>
-      Future versions of DiSARM will give the public access to real-time risk maps to understand disease location and spread, providing alerts and recommendations to promote and encourage personal protection. DiSARM is flexible and not disease specific. Where entomological data are available, DiSARM can be adapted to predict vector distributions, direct teams to potential breeding sites and make recommendations about optimal intervention strategies for malaria and other mosquito-borne diseases such as Zika, Dengue and Chikungunya.
+  
+      <p>
+        A forecasting module will allow programs to receive alerts as to the locations of potential outbreaks before they happen and send alerts to relevant parties, such as health facilities, community health workers and other community leaders in these areas.
       </p>
+
+      <p>
+        Future versions of DiSARM will give the public access to real-time risk maps to understand disease location and spread, providing alerts and recommendations to promote and encourage personal protection. DiSARM is flexible and not disease specific. Where entomological data are available, DiSARM can be adapted to predict vector distributions, direct teams to potential breeding sites and make recommendations about optimal intervention strategies for malaria and other mosquito-borne diseases such as Zika, Dengue and Chikungunya.
+      </p>
+
+      <p>For more information on the project please contact Hugh Sturrock <a href="mailto:hugh.sturrock@ucsf.edu">hugh.sturrock@ucsf.edu</a></p>
     </div>
   </div>
 </div>
