--- a/_includes/about.html
+++ b/_includes/about.html
@@ -35,6 +35,20 @@
       </p>
 
       <p>For more information on the project please contact Hugh Sturrock <a href="mailto:hugh.sturrock@ucsf.edu">hugh.sturrock@ucsf.edu</a></p>
+
+<h3 class="text-center headline">Media Coverage</h3>
+<a href="https://blog.google/products/maps/how-maps-and-machine-learning-are-helping-eliminate-malaria/">Google interview</a>
+
+<a href="http://fortune.com/2017/04/25/google-machine-learning-malaria/">Fortune Magazine</a>
+
+<a href="https://www.theguardian.com/global-development-professionals-network/2014/oct/23/real-time-maps-could-predict-and-prevent-the-spread-of-malaria">The Guardian</a>
+
+<a href="http://www.pbs.org/newshour/bb/maps-packed-data-help-scientists-fight-malaria/">PBS Newshour segment</a>
+
+<a href="http://www.sfchronicle.com/health/article/UCSF-harnesses-Google-Earth-Engine-for-new-5745737.php">San Francisco Chronicle</a>
+
+<a href="https://www.nytimes.com/2015/01/09/business/international/mapping-the-worlds-problems.html?_r=0">New York Times</a>
+
     </div>
   </div>
 </div>
