added media coverage with ordered list (title hyperlinked, name of publication in black)

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -40,7 +40,7 @@
       <ul>
   <li><a href="https://blog.google/products/maps/how-maps-and-machine-learning-are-helping-eliminate-malaria/">Google interview</a>
 </li>
-  <li><a href="http://fortune.com/2017/04/25/google-machine-learning-malaria/">Fortune Magazine</a></li>
+  <li><a href="http://fortune.com/2017/04/25/google-machine-learning-malaria/">How Google Is Using Machine Learning to Fight Malaria</a></li> "Fortune Magazine"
   <li><a href="https://www.theguardian.com/global-development-professionals-network/2014/oct/23/real-time-maps-could-predict-and-prevent-the-spread-of-malaria">The Guardian</a></li>
   <li><a href="http://www.pbs.org/newshour/bb/maps-packed-data-help-scientists-fight-malaria/">PBS Newshour segment</a></li>
   <li><a href="http://www.sfchronicle.com/health/article/UCSF-harnesses-Google-Earth-Engine-for-new-5745737.php">San Francisco Chronicle</a></li>
