added media coverage with ordered list (title hyperlinked, name of publication in black)

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -38,13 +38,13 @@
 
 <h3 class="text-center headline">Media Coverage</h3>
       <ul>
-  <li><a href="https://blog.google/products/maps/how-maps-and-machine-learning-are-helping-eliminate-malaria/">Google interview</a>
+  <li><a href="https://blog.google/products/maps/how-maps-and-machine-learning-are-helping-eliminate-malaria/">How maps and machine learning are helping to eliminate malaria</a>"Google interview"
 </li>
   <li><a href="http://fortune.com/2017/04/25/google-machine-learning-malaria/">How Google Is Using Machine Learning to Fight Malaria</a></li>"Fortune Magazine"
-  <li><a href="https://www.theguardian.com/global-development-professionals-network/2014/oct/23/real-time-maps-could-predict-and-prevent-the-spread-of-malaria">The Guardian</a></li>
-  <li><a href="http://www.pbs.org/newshour/bb/maps-packed-data-help-scientists-fight-malaria/">PBS Newshour segment</a></li>
-  <li><a href="http://www.sfchronicle.com/health/article/UCSF-harnesses-Google-Earth-Engine-for-new-5745737.php">San Francisco Chronicle</a></li>
-  <li><a href="https://www.nytimes.com/2015/01/09/business/international/mapping-the-worlds-problems.html?_r=0">New York Times</a></li>
+  <li><a href="https://www.theguardian.com/global-development-professionals-network/2014/oct/23/real-time-maps-could-predict-and-prevent-the-spread-of-malaria">Real time maps could predict and prevent the spread of malaria</a></li>"The Guardian"
+  <li><a href="http://www.pbs.org/newshour/bb/maps-packed-data-help-scientists-fight-malaria/">How maps packed with data help scientists fight malaria</a></li>"PBS Newshour segment"
+  <li><a href="http://www.sfchronicle.com/health/article/UCSF-harnesses-Google-Earth-Engine-for-new-5745737.php">UCSF harnesses Google Earth Engine for new malaria fight</a></li>"San Francisco Chronicle"
+  <li><a href="https://www.nytimes.com/2015/01/09/business/international/mapping-the-worlds-problems.html?_r=0">Mapping the World's Problems</a></li>"New York Times"
 </ul>
     </div>
   </div>
