changed 'progress' to 'updates'

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                         <a class="page-scroll" href="/partners_and_team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/progress">Updates</a>
+                        <a class="page-scroll" href="/updates">Updates</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/code_and_tech">Code and tech</a>
