--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
         DiSARM is a unique surveillance and decision support platform, designed to allow malaria control programs to perform complex spatial and mathematical analyses and interact with data in an intuitive way to help inform decision-making. Developed initially for malaria by the <a href="http://www.shrinkingthemalariamap.org/">Malaria Elimination Initiative</a> in the <a href="https://globalhealthsciences.ucsf.edu/about-us/our-organization/global-health-group" target="_blank">Global Health Group </a>at the University of California, San Francisco, DiSARM is being implemented in Swaziland and Zimbabwe with the support of the Bill and Melinda Gates Foundation, Google Earth Engine, and the Clinton Health Access Initiative.  
       </p>
       <p>
-        A core feature of DiSARM is the ability to combine malaria program information such as case data with satellite derived environmental and climatological variables to produce risk maps and recommendations of actions that a program can make decision on.  The system operates in near real time and is fully automated, producing outputs in different formats that suit the users.
+        A core feature of DiSARM is the ability to combine malaria program information such as case data with satellite derived environmental and climatological variables to produce risk maps and recommendations of actions that a program can make decision on. The system is capable of operating in near real time and is fully automated, producing outputs in different formats that suit the users.
       </p>
       <img class="about-image" src="{{ site.image_root_url }}w_780/{{ site.image_account }}/ut5w71nf48roqbzbfopo">
       <p>
