Changed <a href="/progress">Back to Progress</a> to <a href="/updates">Back to Updates</a>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
         {{content}}
 
         <br>
-        <a href="/progress">Back to Progress</a>
+        <a href="/updates">Back to Updates</a>
         </div>
       </div>
     </div>
