undoing the q_auto - makes it larger...

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       <p>
         A core feature of DiSARM is the ability to combine malaria program information such as case data with satellite derived environmental and climatological variables to produce risk maps and recommendations of actions that a program can make decision on. The system is capable of operating in near real time and is fully automated, producing outputs in different formats that suit the users.
       </p>
-      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/c_scale,q_auto,w_600/v1494920523/disarm-website/disarm_about.png">
+      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/c_scale,w_600/v1494920523/disarm-website/disarm_about.png">
       <p>
       Behind the scenes is DiSARM’s core that uses satellite data processed using Google Earth Engine. The core interface gives users a real-time view of the malaria situation and allows predictions of risk at specific locations, such as health facility catchments, villages and schools. Overlaying data on interventions allows programs to better understand their distribution and identify areas at high risk with insufficient levels of protection.
       </p>
@@ -24,7 +24,7 @@
         DiSARM is being implemented in Swaziland and Zimbabwe. The early version has already led to substantial impact in Swaziland with the IRS spraying guided by prioritization maps produced by DiSARM. In partnership with CHAI we are working on a foci management module. This will simplify the process of identifying and delineating foci, and will allow programs to trigger and guide investigation and response and monitor and track progress towards elimination of all foci.
       </p>
 
-      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/c_scale,q_auto,w_600/v1493015291/disarm-website/DiSARM_Targeter_2.png">
+      <img class="about-image" src="http://res.cloudinary.com/disarm/image/upload/c_scale,w_600/v1493015291/disarm-website/DiSARM_Targeter_2.png">
   
       <p>
         A forecasting module will allow programs to receive alerts as to the locations of potential outbreaks before they happen and send alerts to relevant parties, such as health facilities, community health workers and other community leaders in these areas.
