--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -168,6 +168,8 @@ header .intro-text .intro-heading {
     font-size: 40px;
   }
 
+
+
 @media (min-width: 768px) {
   
   .ucsf-logo, .ucsf-logo-container {
@@ -202,6 +204,11 @@ header .intro-text .intro-heading {
   
   .entry-img-container {
     display: flex;
+  }
+
+  header .intro-text {
+    padding-top: 200px;
+    padding-bottom: 100px;
   }
 
   header .intro-text .intro-heading { 
