--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,7 @@
       {% endif %} 
 
         <div class="col-xs-12 col-sm-6 team-member">
-          <img src="{{ site.image_root_url }}w_400,h_400,c_fill,g_face/{{ site.image_account }}/{{ person.image }}" alt="{{ person.content | strip_html | truncatewords: 15 }}" class="img-responsive img-circle team-image">
+          <img src="{{ site.image_root_url }}c_fill,w_400,h_400,g_face/{{ site.image_account }}/{{ person.image }}" alt="{{ person.content | strip_html | truncatewords: 15 }}" class="img-responsive img-circle team-image">
           <h4 class="text-center">{{person.name}}</h4>
           <p class="text-muted text-center">{{person.content}}</p>
         </div>
