--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a href="https://docs.disarm.io">Docs</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="/">The project</a>
                     </li>
                     <li>
@@ -29,12 +32,6 @@
                     <li>
                         <a class="page-scroll" href="/updates">Updates</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="/code_and_tech">Code and tech</a>
-                    </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="/docs">API Docs</a>
-                    </li> -->
                     <li class="ucsf-logo-container">
                         <a href="http://www.ucsf.edu/" style="padding: 0;" target="_blank"><img class="ucsf-logo" src="/img/ucsf.png" /></a>
                     </li>
