change header text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">DiSARM - Disease Surveillance And Risk Monitoring</div>
-                <div class="intro-heading">Data-driven decision making platform for malaria elimination</div>
+                <div class="intro-heading">Data-driven decision making for malaria elimination</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
-<!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
- -->
 
