--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,32 @@
 <div class="container about" id="about">
-    <h3 class="text-center headline"></h3>
-    <div class="row">
-        <div class="col-sm-12 col-md-offset-1 col-md-10">
-            {% capture blurb %}{% include blurb.md %}{% endcapture %} {{ blurb | markdownify }}
-        </div>
+  <h3 class="text-center headline"></h3>
+  <div class="row">
+    <p>
+      Using data can lead to more impactful decision making over intuition
+      alone. But collecting, analyzing, and visualizing data is difficult,
+      especially in resource constrained settings. The Disease Surveillance and
+      Risk Monitoring (DiSARM) project is building an open-source platform that
+      enables disease control programs to better target interventions spatially,
+      guide field teams more precisely, and evaluate coverage more robustly. The
+      DiSARM platform is comprised of a web-based application and a set of
+      customized algorithms accessible through an application programming
+      interface (API).
+    </p>
+    <p>
+      The DiSARM project is lead by the Malaria Elimination Initiative at the
+      University of California San Francisco in collaboration with Peoplesized
+      and the Clinton Health Access Initiative. The project is supported by the
+      Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 api">
+      {% capture api_blurb %}{% include blurb_api.md %}{% endcapture %}
+      {{ api_blurb | markdownify }}
     </div>
+    <div class="col-sm-6 app">
+      {% capture app_blurb %}{% include blurb_app.md %}{% endcapture %}
+      {{ app_blurb | markdownify }}
+    </div>
+  </div>
 </div>
