external-link icon

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,11 +21,14 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a href="https://docs.disarm.io">Docs</a>
+                        <a href="https://docs.disarm.io" target="_blank">
+                            <i class="fa fa-external-link"></i>
+                            Docs + demos
+                        </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="/">The project</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="/partners_and_team">Team</a>
                     </li>
