--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,9 +8,10 @@
       Risk Monitoring (DiSARM) project is building an open-source platform that
       enables disease control programs to better target interventions spatially,
       guide field teams more precisely, and evaluate coverage more robustly. The
-      DiSARM platform is comprised of a <a href="/app">web-based application</a> and a <a href="/api">set of
-      customized algorithms</a> accessible through an application programming
-      interface (API).
+      DiSARM platform is comprised of a
+      <a href="/app">web-based application</a> and a
+      <a href="/api">set of customized algorithms</a> accessible through an
+      application programming interface (API).
     </p>
     <p>
       The DiSARM project is lead by the Malaria Elimination Initiative at the
