simpler header text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">DiSARM - Disease Surveillance And Risk Monitoring</div>
                 <div class="intro-heading">Data-driven decision making for malaria elimination</div>
-                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Tell me more</a>
             </div>
         </div>
     </header>
