--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,7 @@
 <div class="container about" id="about">
   <h3 class="text-center headline"></h3>
   <div class="row">
+    <h1>DiSARM: Disease Surveillance And Risk Monitoring Project</h1>
     <p>
       Using data can lead to more impactful decision making over intuition
       alone. But collecting, analyzing, and visualizing data is difficult,
