--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -55,6 +55,7 @@ h6 {
     /* text-transform: uppercase; */
     font-family: {{ site.data.template.font.primary }};
     font-weight: 700;
+    color: #{{ site.data.template.color.header }};
 }
 
 .img-centered {
