Changing header text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                <div class="intro-heading">Data-driven decision making for malaria elimination</div>
+            <div class="intro-text">The Disease Surveillance And Risk Monitoring project is supporting
+                <div class="intro-heading">The Disease Surveillance And Risk Monitoring project is supporting data-driven disease elimination</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell me more</a>
             </div>
         </div>
