Think this now includes an 'about' link on top ribbon

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,9 +26,9 @@
                             Docs + demos
                         </a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="/">The project</a>
-                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="/">About</a>
+                    </li> 
                     <li>
                         <a class="page-scroll" href="/partners_and_team">Team</a>
                     </li>
