Couple of link changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,7 +36,7 @@
                         <a class="page-scroll" href="/updates">Updates</a>
                     </li>
                     <li class="ucsf-logo-container">
-                        <a href="http://www.ucsf.edu/" style="padding: 0;" target="_blank"><img class="ucsf-logo" src="/img/ucsf.png" /></a>
+                        <a href="http://www.shrinkingthemalariamap.org/" style="padding: 0;" target="_blank"><img class="ucsf-logo" src="/img/ucsf.png" /></a>
                     </li>
                 </ul>
             </div>
