--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <div class="container about" id="about">
   <h3 class="text-center headline"></h3>
   <div class="row">
-    <h2>Overview of the DiSARM project</h2>
+    <h2>Project overview</h2>
     <p>
       Using data can lead to more impactful decision making over intuition
       alone. But collecting, analyzing, and visualizing data is difficult,
