--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -176,6 +176,10 @@ header .intro-text .intro-heading {
     font-size: 40px;
   }
 
+img.clickable {
+  padding: 3px;
+  box-shadow: 0 0 2px 1px #d6d6d6;
+}
 
 
 @media (min-width: 768px) {
