same col style for landing page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,25 +1,28 @@
 <div class="container about" id="about">
   <h3 class="text-center headline"></h3>
   <div class="row">
-    <h2>Project overview</h2>
-    <p>
-      Using data can lead to more impactful decision making over intuition
-      alone. But collecting, analyzing, and visualizing data is difficult,
-      especially in resource constrained settings. The Disease Surveillance and
-      Risk Monitoring (DiSARM) project is building an open-source platform that
-      enables disease control programs to better target interventions spatially,
-      guide field teams more precisely, and evaluate coverage more robustly. The
-      DiSARM platform is comprised of a
-      <a href="/app">web-based application</a> and a
-      <a href="/api">set of customized algorithms</a> accessible through an
-      application programming interface (API).
-    </p>
-    <p>
-      The DiSARM project is lead by the Malaria Elimination Initiative at the
-      University of California San Francisco in collaboration with Peoplesized
-      and the Clinton Health Access Initiative. The project is supported by the
-      Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
-    </p>
+    <div class="col-sm-12">
+        <h2>Project overview</h2>
+        <p>
+          Using data can lead to more impactful decision making over intuition
+          alone. But collecting, analyzing, and visualizing data is difficult,
+          especially in resource constrained settings. The Disease Surveillance and
+          Risk Monitoring (DiSARM) project is building an open-source platform that
+          enables disease control programs to better target interventions spatially,
+          guide field teams more precisely, and evaluate coverage more robustly. The
+          DiSARM platform is comprised of a
+          <a href="/app">web-based application</a> and a
+          <a href="/api">set of customized algorithms</a> accessible through an
+          application programming interface (API).
+        </p>
+        <p>
+          The DiSARM project is lead by the Malaria Elimination Initiative at the
+          University of California San Francisco in collaboration with Peoplesized
+          and the Clinton Health Access Initiative. The project is supported by the
+          Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
+        </p>
+    
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-6 api">
